--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
     "useTabs": false,
     "singleQuote": true,
     "semi": true,
-    "trailingComma": "all",
+    "trailingComma": "none",
     "bracketSpacing": true,
     "jsxBracketSameLine": false,
     "arrowParens": "avoid"
